# bookstore

./: .dockerignore  .gitignore  Dockerfile  Makefile  Procfile  README.md  build.sh  docker-compose.yml  env.dev  manage.py  pyproject.toml  railway  railway.json  requirements.txt  test.py  vercel.json
.github/workflows/: build.yml  workflow-pr.yml
bookstore/: settings.py  urls.py
order/migrations/: 0001_initial.py
order/models/: order.py
order/tests/: test_order_viewsets.py
order/viewsets/: order_viewset.py
product/migrations/: 0001_initial.py  0002_rename_prices_product_price.py
product/models/: product.py
product/tests/test_viewsets/: test_category_viewset.py  test_product_viewset.py
product/viewsets/: category_viewset.py
staticfiles/: staticfiles.json
