[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = "Bookstore API"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
pytest = "^8.2.1"
factory-boy = "^3.3.0"
djando = "^0.2" # Verifique se esta linha é necessária, parece um erro de digitação
django = "^5.0.6"
django-rest-framework = "^0.1.0"
django-extensions = "^3.2.3"
django-debug-toolbar = "^4.4.2"
whitenoise = "^6.6.0"
psycopg2 = "^2.9"
gunicorn = "^22.0.0"
python-decouple = "^3.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
